# ecal

./: .clang-format
app/diag/diag_gui/appmenu/: app.desktop.in
app/diag/diag_gui/src/: main_window.ui
app/mon/mon_plugins/: CMakeLists.txt
app/mon/mon_plugins/debug_info_reflection/: CMakeLists.txt
app/mon/mon_plugins/debug_info_reflection/src/: metadata.json  plugin.h  plugin_widget.cpp  plugin_widget.h  plugin_widget.ui
ecal/core/: CMakeLists.txt
ecal/core/include/ecal/: ecal_log.h  ecal_process_graph.h
ecal/core/src/: ecal_global_accessors.cpp  ecal_global_accessors.h  ecal_globals.cpp  ecal_globals.h
ecal/core/src/logging/: ecal_log.cpp  ecal_log_impl.cpp  ecal_log_impl.h
ecal/core/src/processgraph/: ecal_process_graph.cpp  ecal_process_graph.h
lang/python/core/src/: ecal_wrap.cxx
samples/: CMakeLists.txt
samples/cpp/process_graph/: CMakeLists.txt
samples/cpp/process_graph/src/: default.txt  edge.cpp  edge.h  elasticnodes.pro  filter.cpp  filter.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  monitoring.cpp  monitoring.h  node.cpp  node.h  process_graph.cpp  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
samples/cpp/process_graph_api/: CMakeLists.txt
samples/cpp/process_graph_api/src/: process_graph.cpp
samples/python/monitoring/monitoring_json/: DatabaseHandler.py  README.md  callbacks.py  compose.yaml  data.py  docker-compose.yml  eCAL Monitoring.json  eclipse_ecal-6.0.0a1.dev212+ga39f93760-cp312-cp312-win_amd64.whl  eclipse_ecal-6.0.0a16.dev35+gb8388c8d7-cp312-cp312-win_amd64.whl  helpers.py  models.py  monitor.py  monitor_snapshot_script.py  monitoring_json.py  monitoring_json_old.py  requirements.txt
samples/python/monitoring/monitoring_json/grafana/: datasource.yaml
samples/python/monitoring/monitoring_json/grafana/dashboards/: Host Overview.json  Service Overview.json  Topic Overview.json  eCAL Monitoring.json
samples/python/monitoring/monitoring_json/grafana_dashboards/: Host Overview-1734610717314.json  Host Overview.json  Service Overview-1734610724594.json  Service Overview.json  Topic Overview-1734610805093.json  Topic Overview.json  eCAL Monitoring-1734610706021.json  eCAL Monitoring.json
samples/python/monitoring/monitoring_json/proto_messages/: mma_pb2.py
